--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,19 @@
 # Setup
 title:        Ben Norwood's Page
 tagline: >-
-  My personal page of projects, and developer insight (WIP).
+  My personal page of projects, and developer insight.
 baseurl:      ""
 paginate:     1
-
 
 # About/contact
 author:
   name:       Ben Norwood
+  email:      contact@bennorwood.com
   url:        https://www.linkedin.com/in/benjamin-norwood-71ab8577/
   twitterHandle: daBenzino
   githubUsername:  bennorwood
   linkedInProfile:  benjamin-norwood-71ab8577
+  
 # Gems
 gems:
   - jekyll-paginate
