--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ paginate:     1
 # About/contact
 author:
   name:       Ben Norwood
-  email:      contact@bennorwood.com
+  email:      contact@bennorwood.co
   url:        https://www.linkedin.com/in/benjamin-norwood-71ab8577/
   twitterHandle: daBenzino
   githubUsername:  bennorwood
